--- a/frontend/bower.json
+++ b/frontend/bower.json
@@ -12,7 +12,8 @@
     "angular-sanitize": "^1.3.0",
     "angular-touch": "^1.3.0",
     "angular-bootstrap": "^0.14.3",
-    "angular-smart-table": "^2.1.4"
+    "angular-smart-table": "^2.1.4",
+    "angular-ui-calendar": "~1.0.1"
   },
   "devDependencies": {
     "angular-mocks": "^1.3.0"
