--- a/frontend/bower.json
+++ b/frontend/bower.json
@@ -13,7 +13,8 @@
     "angular-touch": "^1.3.0",
     "angular-bootstrap": "^0.14.3",
     "angular-smart-table": "^2.1.4",
-    "angular-ui-calendar": "~1.0.1"
+    "angular-ui-calendar": "~1.0.1",
+    "angular-ui-bootstrap-datetimepicker": "~0.14.4"
   },
   "devDependencies": {
     "angular-mocks": "^1.3.0"
