--- a/frontend/bower.json
+++ b/frontend/bower.json
@@ -14,7 +14,8 @@
     "angular-bootstrap": "^0.14.3",
     "angular-smart-table": "^2.1.4",
     "angular-ui-calendar": "~1.0.1",
-    "angular-ui-bootstrap-datetimepicker": "~0.14.4"
+    "angular-ui-bootstrap-datetimepicker": "~0.14.4",
+    "typeahead.js": "^0.11.1"
   },
   "devDependencies": {
     "angular-mocks": "^1.3.0"
